--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "apexcharts": "^3.45.2",
     "axios": "^1.7.3",
     "flatpickr": "^4.6.13",
@@ -16,7 +17,9 @@
     "next": "^14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
